--- a/src/Avatar.stories.mdx
+++ b/src/Avatar.stories.mdx
@@ -54,6 +54,7 @@ The user's name should _always_ be present when using Avatar – either printed 
 
 export const Template = (args) => <Avatar {...args} />;
 
+<Canvas>
 <Story
   name="standard"
   args={{
@@ -64,6 +65,13 @@ export const Template = (args) => <Avatar {...args} />;
 >
   {Template.bind({})}
 </Story>
+</Canvas>
+
+<ArgsTable story="standard" />
+
+## Usage
+
+Avatar is used to represent a person or an organization. By default the avatar shows an image and gracefully falls back to the first initial of the username. While hydrating the component you may find it useful to render a skeleton template to indicate that Avatar is awaiting data. Avatars can be grouped with the AvatarList component.
 
 ### Sizes
 
