--- a/src/Intro.stories.mdx
+++ b/src/Intro.stories.mdx
@@ -3,8 +3,18 @@ import { Meta } from "@storybook/addon-docs";
 
 <Meta title="Design System/Introduction" />
 
-# Introduction to the Storybook design system tutorial
+# Storybook for ProView Demo
+Storybook is a frontend workshop for building UI components and pages in isolation.
+## Key points
+1. Rapid development of reusable components
+2. [Automated testing](https://storybook.js.org/docs/react/writing-tests/introduction) (a11y, unit, end-to-end)
+3. Optimized team workflow
+    1. PR triggers visual review by everyone ([Chromatic](https://www.chromatic.com/))
+    2. Integrates with existing tools (Figma, Jira, Github/Azure DevOps and more)
+4. Publishable as an NPM package
+    1. Quick installs & releases
+5. Built-in [documentation](https://storybook.js.org/docs/react/writing-docs/introduction)
 
-The Storybook design system tutorial is a subset of the full [Storybook design system](https://github.com/storybookjs/design-system/), created as a learning resource for those interested in learning how to write and publish a design system using best practice techniques.
+------
 
-Learn more in the [Storybook tutorials](https://storybook.js.org/tutorials/).
+Learn more about writing and publishing a [Storybook design system](https://github.com/storybookjs/design-system/) or take a look at [Storybook tutorials](https://storybook.js.org/tutorials/).
