--- a/src/Intro.stories.mdx
+++ b/src/Intro.stories.mdx
@@ -1,16 +1,16 @@
 
 import { Meta } from "@storybook/addon-docs";
 
-<Meta title="Design System/Introduction" />
+<Meta title="Introduction" />
 
-# Storybook for ProView Demo
+# Storybook Proof of Concept
 Storybook is a frontend workshop for building UI components and pages in isolation.
-## Key points
+## Value
 1. Rapid development of reusable components
 2. [Automated testing](https://storybook.js.org/docs/react/writing-tests/introduction) (a11y, unit, end-to-end)
-3. Optimized team workflow
-    1. PR triggers visual review by everyone ([Chromatic](https://www.chromatic.com/))
-    2. Integrates with existing tools (Figma, Jira, Github/Azure DevOps and more)
+3. Optimized workflow
+    1. Integrates with existing tools and practices (Jira, Figma, version control, CI/CD and more)
+    2. Cross-functional visual review (even external stakeholders) using [Chromatic](https://www.chromatic.com/)
 4. Publishable as an NPM package
     1. Quick installs & releases
 5. Built-in [documentation](https://storybook.js.org/docs/react/writing-docs/introduction)
